--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,1 +1,19 @@
-../../front/index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>app</title>
+  <link rel="stylesheet" type="text/css" href="dist/bootstrap.min.css">
+</head>
+<body>
+<div id="app">
+  <p>&nbsp; Загрузка...</p>
+</div>
+
+
+<script src="dist/build.js"></script>
+</body>
+</html>
+
